# readmate

./: .gitignore  LICENSE.txt  README.md  cli.py  human_readme.md  pyproject.toml  review_and_check.py
readmate/: readmate_agent.py
readmate/agents_and_tools/: search_&_discover.py
readmate/chains/: chat_message_chain.py
readmate/configs/: include_extensions.toml  readme_section_completion.json  readme_structure.toml
readmate/generators/: markdown.py  tree.py
readmate/modules/: general_file_analyzer.py  project_inspector.py  python_analyzer.py
readmate/prompts/: __init__.py  file_readers.py  input_prompt.py  inspector.py  md.py  module_readers.py  python_module.py
readmate/toolkit/: low_level_analysis.py  search_engines.py  top_level_analysis.py
readmate/utils/: .env_template  basemodel_modules.py  general_utils.py  logger.py  setup_env.py  token_callback_tracker.py  utils_tools.py
tests/: notebook_analyzer.py  test_project_inspector.py  test_readmate_agent.py
